# Serviq

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
backend/: main.py  pyproject.toml
backend/agent/: __init__.py  conversation_recall.py  direct_runner.py  graph.py  langgraph_runner.py  orchestrator.py  prompts.py  skill.md  state.py  task_loop.py  tool_planner.py  types.py
backend/api/: health.py  router.py  router.py.bak_memory_center  router.py.bak_runtime_settings  router.py.bak_tool_settings_v2
backend/api/routes/: agent.py  approvals.py  chat.py  conversations.py  health.py  llm.py  memory.py  memory_center.py  runtime_settings.py  system.py  tool_settings.py  tools.py  ws.py
backend/core/: config.py  errors.py  logging.py  middleware.py  paths.py
backend/db/: base.py  init_db.py  models.py  session.py
backend/llm/: __init__.py  lmstudio_client.py
backend/memory/: __init__.py  dynamic_manager.py  semantic_memory.py  service.py  sqlite_memory.py  vector_store.py
backend/schemas/: agent.py  approvals.py  chat.py  common.py  conversations.py  llm.py  memory.py  system.py  tools.py
backend/services/: directory_access_store.py  memory_center_store.py  runtime_settings_store.py  shell_settings_store.py  startup.py  tool_execution_guard.py  tool_settings_store.py  ui_conversation_store.py
backend/tools/: __init__.py  approval_store.py  base.py  browser_tools.py  execution_log.py  policy.py  registry.py  router.py  safe_tools.py  shell_tools.py  web_tools.py  write_tools.py
(+57 files in other folders)
