[package]
name = "serviq"
version = "0.2.0"
description = "Serviq desktop app"
authors = ["Fahim"]
edition = "2021"

[lib]
name = "serviq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
